@startuml

<style>

</style>


enum AuthMfaType {
  SMS
}

entity AuthMfaConfig {
  * id: String
  * authId: String
  * createdAt: DateTime
  confirmedAt: DateTime?
  deletedAt: DateTime?
  * type: AuthMfaType
  * configuration: Json
  * AuthMfaChallenge: AuthMfaChallenge[]
}

entity AuthDevice {
  * id: String
  * authId: String
  * deviceId: String
  * userAgent: String
  * AuthMfaChallenge: AuthMfaChallenge[]
}

entity AuthMfaChallenge {
  * id: String
  * authId: String
  succeededAt: DateTime?
  rememberUntil: DateTime?
  * authDeviceId: String
  * authDevice: AuthDevice
  * authMfaConfigId: String
  * authMfaConfig: AuthMfaConfig
  * AuthMfsChallengeAttempt: AuthMfsChallengeAttempt[]
}

entity AuthMfsChallengeAttempt {
  * id: String
  * authId: String
  * createdAt: DateTime
  * wasSuccessful: Boolean
  * authMfaChallengeId: String
  * challenge: AuthMfaChallenge
}

AuthMfaConfig ||..|| AuthMfaType
AuthDevice ||..|{ AuthMfaChallenge
AuthMfaConfig ||..|{ AuthMfaChallenge
AuthMfaChallenge ||..|{ AuthMfsChallengeAttempt
AuthMfaConfig ||..|| AuthMfaType

@enduml
